# monarch_trailcam_classifier

./: .gitignore  .nojekyll  Gemfile  Monarch Image Labeling.pod  README.md  README_repair_index.md  _config.yml  check_image_skip.html  check_original_files.py  documentation.html  enhanced_repair_index.py  enhanced_repair_index_v2.py  identify_orphaned_entries.py  index.html  index.md  index.qmd  index_repair_plan.md  package-lock.json  package.json  random_photo_copier.py  refactorPlan.md  reorganization_plan.md  repair_index.py  style.css  tasks.md  theme.scss
python-tools/extract-temp/: Iterative-Approach-for-OCR-Data-Correction.md  METHODS.md  Project_Data_Extraction_and_Architecture_Plan.md  SC10_followup.csv  SC10_manual_entries.csv  SC2_followup.csv  SC4_followup.csv  SC5_followup.csv  SC6_followup.csv  SC7_followup.csv  SLC6_1_followup.csv  SLC6_2_followup.csv  SPEC.md  UDMH2_followup.csv  UDMH3_followup.csv  Workflow_for_Manual_Temperature_Data_Cleaning.md  clean_temperature_data.py  combined_followup.csv  comprehensive_data_issues_detector.py  data_exploration.py  extract_temp.py  extract_temp_mvp.py  extreme_outliers.csv  extreme_temperature_issues.csv  main.py  manual_extreme_temperature_entries.csv  manual_review.py  manual_temperature_SC2_data.csv  manual_temperature_entries_data.csv  manual_temperature_entry.py  missing_temperature_data.csv  missing_temperature_images.csv  plot_deployment_with_issues.py  plot_temperature_anomalies.py  pyproject.toml  remaining_outliers.csv  sliding_window_anomaly_detection.py  temperature_anomaly_detection_exploration.md
(+84 files in other folders)
